--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
       </header>
       <main class="content">
         <section class="menu" id="menu">
-          <h2 class="menu__title">Menu-list</h2>
-          <p class="menu__subtitle">Speciality coffee</p>
+          <h2 class="menu__title">Menu</h2>
+          <p class="menu__subtitle">We brew coffee from locally roasted, Fairtrade certified beans and use biodegradable cups.All teas from our collection are $2/cup.</p>
           <div class="menu__cards">
             <div class="card">
               <h3 class="card__title">Filter</h3>
@@ -80,7 +80,7 @@
                 <li class="card__list-item"> Key Lime Pie <span class="card__list-divider"></span> $3 </li>
                 <li class="card__list-item"> Blue Velvet Cake <span class="card__list-divider"></span> $3.75 </li>
                 <li class="card__list-item"> Web Cookie <span class="card__list-divider"></span> $2 </li>
-                <li class="card__list-item"> Fresh Bug'gette <span class="card__list-divider">$0.25</span></li>
+                <li class="card__list-item"> Fresh Bug'gette <span class="card__list-divider"></span>$0.25</li>
               </ul>
             </div>
           </div>
@@ -117,8 +117,8 @@
     <section id="Book-a-table" class="reservation">
       <h2 class="reservation__title">Book a table</h2>
       <form class="form reservation__form">
-        <fieldset>
-        <fieldset class="form__fieldset">
+      
+          <fieldset class="form__fieldset">
           <label for="name" class="form__label">Name*
           <input
            class="form__input" 
@@ -147,7 +147,6 @@
             required
              />
         </label>
-        </fieldset>
         <label for="email" class="form__label">Email*
         <input
          class="form__input" 
@@ -155,25 +154,27 @@
          placeholder="email" 
          id="email" 
          required 
-         />
-         </label>
-        <fieldset>
-          <button class="form__class">Save</button>
-        </fieldset>
-          <label for="checkbox" class="form__label">
-            <input 
-            class="form__input" 
-            type="text" 
-            placeholder="checkbox" 
-            id="checkbox" 
-            required 
-            /> 
-            Checkbox*
+         /></label>
+         </fieldset>
+         <fieldset class="form__fieldset">
+
+           <button type="submit" class="form__button">Book a table</button>
+         </fieldset>
+         <fieldset class="form__fieldset">
+           <label
+            class="form__label form__label-checkbox" 
+            for="terms-of-use-checkbox"
+            >
+            <input
+            type="checkbox"
+            class="form__input form__input-checkbox form__checkbox-size"
+            required
+            />
+            I agree with the terms of use
            </label>
-        </fieldset>
+         </fieldset>
       </form>
     </section>
-   </section>
     <section class="about" id="about">
       <h2 class="about__title">About the coffee shop</h2>
       <div class="about__content">
