--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Noto+Serif:ital@0;1&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./vendor/normalize.css">
-    <link rel="stylesheet" href="./pages/index.css">
+    <link rel="stylesheet" href="./vendor/normalize.css"> 
+    <link rel="stylesheet" href="./pages/index.css"> 
     <title>Fluid Coffee Bar</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Smith Akin's portfolio at practicum">
@@ -39,7 +39,7 @@
         </nav>
         <h1 class="header__title">
           <span class="header__span-accent">Speacilty Coffee</span>
-          <span>in the Practicum Library</span>
+          in the Practicum Library
         </h1>
         <p class="header__description"> Welcome to our study zone! We've got the coffee to energize you and the cozy vibes to help you get creative </p>
         <img src="./images/inside_coffee_shop.png" alt="Ilustration 'Inside the coffee shop'" class="header__image" />
@@ -88,35 +88,36 @@
             </div>
           </div>
         </section>
-          <section id="recipes" class="recipes">
-      <h2 class="recipes__title">Recipes</h2>
-      <p class="recipes__subtitle"> check out some recipes we've collected for your home-brewing convinience </p>
-      <div class="recipes__videos">
-        <div class="recipes__video-item">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/j6VlT_jUVPc" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-          <div class="recipes__video-caption">
-            <span>Aeropress recipe</span>
-            <span>~5min</span>
-        
-          </div>
-          </div>
-        <div class="recipes__video-item">
-         <iframe width="560" height="315" src="https://www.youtube.com/embed/st571DYYTR8" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-          <p class="recipes__video-caption">
-            <span>French press recipes</span>~15min
+         <section id="recipes" class="recipes">
+          <h2 class="recipes__title">Recipes</h2>
+          <p class="recipes__subtitle">
+            Check out some recipes we've collected for your home-brewing
+            convenience.
           </p>
-        </div>
-        </div>
-    </section>
-    <!-- <section class="about" id="about">
-      <h2 class="about__title">About the coffee shop</h2>
-      <div class="about__content">
-        <p class="about__paragraph"> Our Coffee Shop is located in the Practicum Library's hall. It features 6 tables and free WIFI. </p>
-        <p class="about__paragraph"> Our main mission is keeping guests cozy and engaged. Beside that, we try to reduce our environmental impact-so we don't sell single-use cup. But you can buy one of our reusable cups. </p>
-      </div>
-      <div class="about__circle about__circle_animation_blured"></div>
-      <div class="about__circle"></div>
-    </section> -->
+          <div class="recipes__videos">
+            <div class="recipes__video">
+              <iframe
+                class="recipes__iframe"
+                src="https://www.youtube.com/embed/j6VlT_jUVPc"
+              >
+              </iframe>
+              <p class="recipes__video-caption">
+                Aeropress recipe<span class="recipes__list-divider"></span>~5
+              </p>
+            </div>
+            <div class="recipes__video">
+              <iframe
+                class="recipes__iframe"
+                src="https://www.youtube.com/embed/st571DYYTR8"
+              >
+              </iframe>
+              <p class="recipes__video-caption">
+                French press recipe<span class="recipes__list-divider"></span
+                >~15min
+              </p>
+            </div>
+          </div>
+        </section>
     <section id="Book-a-table" class="reservation">
       <h2 class="reservation__title">Book a table</h2>
       <form class="form reservation__form">
@@ -161,14 +162,14 @@
          </fieldset>
          <fieldset class="form__fieldset">
 
-           <button type="submit" class="form__button">Book a table</button>
+           <button type="submit" class="reservation__button">Book a table</button>
          </fieldset>
          <fieldset class="form__fieldset">
            <label
             for="termsofuse"
             > 
             <input
-              class="form__input form__input-checkbox form__checkbox-size"
+              class="form__input form__input-checkbox"
                 type="checkbox"
                   id="termsofuse"
                   required
@@ -188,33 +189,35 @@
       <div class="about__circle"></div>
     </section>
     </main>
-    <footer class="footer" id="footer">
-      <div class="footer__columns">
-        <h2 class="footer__column">
-          <img class="footer__logo" 
-          src="./images/practicum_logo.svg" 
-          alt="footerlogo" 
+    <footer class="footer">
+        <div class="footer__content">
+          <img
+            src="./images/practicum_logo.svg"
+            alt="Practicum logo"
+            class="footer__logo"
           />
-        </h2>
-      
-        <div class="footer__column footer__column-content-social">
-          <h2 class="footer__column-heading">Social Media</h2>
-          <ul class="footer__list">
-            <li class="footer__list-item">
-              <a class="footer__social-link" href="#">
-                <img class="footer__social-icon" src="./images/facebook_white.svg" alt="Facebook Log" />
-                Facebook
-              </a>
-            </li>
-            <li class="footer__list-item">
-              <a class="footer__social-link" href="#">
-                <img class="footer__social-icon" src="./images/instagram_white.svg" alt="Instagram Log" />
-                Instagram
-              </a>
-            </li>
-          </ul>
+          <div>
+            <h4 class="footer__social-heading">Social Media</h4>
+            <ul class="footer__list">
+              <li class="footer__list-item">
+                <img
+                  class="footer__social-icon"
+                  src="images/facebook_white.svg"
+                  alt="Facebook"
+                />
+                <a class="footer__social-link" href="#">Facebook</a>
+              </li>
+              <li class="footer__list-item">
+                <img
+                  class="footer__social-icon"
+                  src="images/instagram_white.svg"
+                  alt="Instagram"
+                />
+                <a class="footer__social-link" href="#">Instagram</a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
       <p class="footer__copyright">&copy;2023 Akin Smith</p>
     </footer>
   </div>
