changes made to porject 2 submission 7

--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-     <link rel="shortcut icon" href="./favicon.ico?v=2" type="image/x-icon" />
+     <link rel="shortcut icon" href="./favicon.ico"/>
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Noto+Serif:ital@0;1&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./vendor/normalize.css"> 
     <link rel="stylesheet" href="./pages/index.css"> 
     <title>Fluid Coffee Bar</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -70,7 +69,7 @@
               </ul>
             </div>
             <div class="card">
-              <h3 class="card__title">Filter</h3>
+              <h3 class="card__title">Espresso</h3>
               <ul class="card__list">
                 <li class="card__list-item"> Macchiato <span class="card__list-divider"></span> $2.25 (25ml) </li>
                 <li class="card__list-item"> Cartado <span class="card__list-divider"></span> $2.5 (50ml) </li>
@@ -175,7 +174,7 @@
             for="termsofuse"
             > 
             <input
-              class="form__input-checkbox"
+              class="form__checkbox"
                 type="checkbox"
                   id="termsofuse"
                   required
